# cloudiq

./: .dockerignore  .env.demo.example  .env.development.example  .env.example  .env.production.example  .gitignore  Dockerfile  README.md  cloud_cost_intelligence.db-journal  docker-compose.yml  pyproject.toml
app/: cli.py  main.py
app/api/: auth_routes.py  routes.py
app/connectors/aws/: client.py
app/connectors/gcp/: client.py
app/core/: config.py  logging.py  retry.py  security.py
app/db/: session.py
app/models/: __init__.py  anomaly.py  app_setting.py  audit_log.py  cost_record.py  invite.py  job_run.py  recommendation.py  resource_snapshot.py  user.py
app/schemas/: admin.py  api.py  auth.py
app/services/: alerts.py  anomaly_detection.py  audit.py  auth.py  batch_service.py  cost_intelligence.py  demo_data.py  ingestion.py  invite.py  job_monitor.py  optimization.py  recommendations.py  runtime_settings.py  topology.py
app/static/: accept-invite.html  accept-invite.js  app.js  index.html  login.html  login.js  styles.css
app/tasks/: scheduler.py
cloud_cost_intelligence.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
deploy/: render.yaml
tests/: test_pipeline.py
